src/test/ui/resolve/export-fully-qualified.stderr
error[E0433]: failed to resolve: unresolved import
  --> $DIR/export-fully-qualified.rs:6:20
   |
LL |     pub fn bar() { foo::baz(); }
   |                    ^^^
   |                    |
   |                    unresolved import
   |                    help: a similar path exists: `crate::foo`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0433`.
